<resources>
    <string name="app_name">Widgets</string>
    <string name="statusToggleOn"><b>Status : On</b></string>
    <string name="statusToggleOff"><b>Status : OFF</b></string>
    <string name="BothNotTickedCheckbox"><b>Status : Both Not Ticked</b></string>
    <string name="BothTickedCheckBox"><b>Status : Both Ticked</b></string>
    <string name="statusCheckBox1Ticked"><b>Status : 1 - Ticked</b></string>
    <string name="statusCheckBox2Ticked"><b>Status : 2 - Ticked</b></string>
    <string name="RadioButton1Selected"><b>Status : 1 - Selected</b></string>
    <string name="RadioButton2Selected"><b>Status : 2 - Selected</b></string>
    <string name="StatusRatingBar"><b>Status : </b></string>
    <string name="statusSpinner"><b>Status :</b></string>
    <string name="widgets">Widgets</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="off">OFF</string>
    <string name="onn">ONN</string>
    <string name="status">Status :</string>
    <string name="checkbox_1">CheckBox 1</string>
    <string name="checkbox">CheckBox</string>
    <string name="checkbox_2">CheckBox 2</string>
    <string name="radio_button">Radio Button</string>
    <string name="radio_button_1">Radio Button 1</string>
    <string name="radio_button_2">Radio Button 2</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="second_activity">Second Activity</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="exit">Exit</string>
    <string name="spinner">Spinner</string>
    <string name="submit">Submit</string>
    <string name="autocompleteTextView">AutoComplete TexView</string>
    <string name="auto" />
    <string name="seek_bar">Seek Bar</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="show">Show</string>
    <string name="display_date">Display Date</string>
    <string name="display_time">Display Time</string>
    <string name="statusProgress">Status : %d</string>
    <string name="third_activity">Third Activity</string>
    <string name="fourth_activity">Fourth Activity</string>

    <string-array name="cars">

        <item> Aventador </item>
        <item>McLaren 720s</item>
        <item>Gran Cabrio</item>
        <item>Huracan</item>

    </string-array>
</resources>
